check_out.txt
warning: unused import: `VoxelChunk`
  --> astraweave-terrain\src\terrain_modifier.rs:20:32
   |
20 | use crate::{ChunkCoord, Voxel, VoxelChunk, VoxelGrid};
   |                                ^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `HashMap`
  --> astraweave-terrain\src\terrain_modifier.rs:22:24
   |
22 | use std::collections::{HashMap, HashSet, VecDeque};
   |                        ^^^^^^^

warning: `astraweave-terrain` (lib) generated 2 warnings (run `cargo fix --lib -p astraweave-terrain` to apply 2 suggestions)
warning: unused import: `std::f32::consts::PI`
   --> astraweave-materials\src\lib.rs:619:13
    |
619 |         use std::f32::consts::PI;
    |             ^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` on by default

warning: variable does not need to be mutable
   --> astraweave-materials\src\lib.rs:468:13
    |
468 |         let mut metallic_roughness = vec![[0.0f32, 0.5, 0.0, 1.0]; total_pixels];
    |             ----^^^^^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: `astraweave-materials` (lib) generated 2 warnings (run `cargo fix --lib -p astraweave-materials` to apply 2 suggestions)
warning: variable does not need to be mutable
   --> astraweave-render\src\gpu_memory.rs:136:13
    |
136 |         let mut mgr = Self::new();
    |             ----^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: field `skinned_pipeline` is never read
   --> astraweave-render\src\renderer.rs:375:5
    |
284 | pub struct Renderer {
    |            -------- field in this struct
...
375 |     skinned_pipeline: wgpu::RenderPipeline,
    |     ^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: `astraweave-render` (lib) generated 2 warnings (run `cargo fix --lib -p astraweave-render` to apply 1 suggestion)
    Checking hello_companion v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\examples\hello_companion)
warning: unused import: `NpcDialogueState`
 --> examples\hello_companion\src\chat_ui.rs:5:30
  |
5 | use crate::scene::{DemoMode, NpcDialogueState};
  |                              ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `Mat4` and `Quat`
 --> examples\hello_companion\src\scene.rs:9:12
  |
9 | use glam::{Mat4, Quat, Vec3};
  |            ^^^^  ^^^^

warning: unused import: `std::sync::Arc`
  --> examples\hello_companion\src\scene.rs:10:5
   |
10 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

warning: unused import: `wgpu::util::DeviceExt`
  --> examples\hello_companion\src\scene.rs:11:5
   |
11 | use wgpu::util::DeviceExt;
   |     ^^^^^^^^^^^^^^^^^^^^^

error[E0308]: `if` and `else` have incompatible types
   --> examples\hello_companion\src\dialogue_bank.rs:323:13
    |
313 |             } else if input_lower.contains("life") || input_lower.contains("meaning") {
    |  __________________-
314 | | /             [
315 | | |                 "Philosophy has guided travelers for ages...",
316 | | |                 "These existential questions deserve careful reflection...",
317 | | |                 "*gazes contemplatively* The big questions never have simple answers...",
...   | |
320 | | |             .unwrap_or(&"")
321 | | |             .to_string()
    | | |________________________- expected because of this
322 | |           } else {
323 | | /             *self
324 | | |                 .thinking
325 | | |                 .choose(rng)
326 | | |                 .map(|s| *s)
327 | | |                 .unwrap_or(&"Let me consider this...")
    | | |______________________________________________________^ expected `String`, found `str`
328 | |           }
    | |___________- `if` and `else` have incompatible types
    |
help: try using a conversion method
    |
323 ~             (*self
324 |                 .thinking
325 |                 .choose(rng)
326 |                 .map(|s| *s)
327 ~                 .unwrap_or(&"Let me consider this...")).to_string()
    |

warning: unreachable statement
   --> examples\hello_companion\src\main.rs:187:5
    |
183 |         return visual_demo::run_visual_demo();
    |         ------------------------------------- any code following this expression is unreachable
...
187 |     println!("ΓòöΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòù");
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
    |
    = note: `#[warn(unreachable_code)]` on by default
    = note: this warning originates in the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0308`.
warning: `hello_companion` (bin "hello_companion") generated 5 warnings
error: could not compile `hello_companion` (bin "hello_companion") due to 1 previous error; 5 warnings emitted
